Hello world code java 17 cleanup